# LaserChess

./: CMakeLists.txt  README.md  socket_com.md
ai/: main.cpp
ai/include/ai/: AIClient.hpp  Board.hpp  ClientMessageParser.hpp  CommunicationClient.hpp  Defender.hpp  Deflector.hpp  King.hpp  Laser.hpp  Move.hpp  MoveEvaluation.hpp  Piece.hpp  Square.hpp  Switch.hpp  Vector.hpp
ai/src/: AIClient.cpp  Board.cpp  ClientMessageParser.cpp  Defender.cpp  Deflector.cpp  King.cpp  Laser.cpp  Move.cpp  Switch.cpp  Vector.cpp  main.cpp
common/include/common/: test_header.hpp
common/include/common/args/: parser.hpp
common/include/common/game/: board.hpp  messages.hpp  move.hpp  move_evaluation.hpp  square.hpp
common/include/common/game/pieces/: constants.hpp  defender.hpp  deflector.hpp  king.hpp  laser.hpp  piece.hpp  switch.hpp
common/include/common/math/: vector.hpp
common/include/common/socket/: base.hpp  errors.hpp  server.hpp  socket.hpp
common/src/args/: parser.cpp
common/src/game/: board.cpp  board_loading.cpp  messages.cpp  move.cpp
common/src/game/pieces/: defender.cpp  deflector.cpp  king.cpp  laser.cpp  switch.cpp
common/src/socket/: base.cpp  server.cpp  socket.cpp
laserchess-Frontend/: README.md  package-lock.json  package.json
laserchess-Frontend/src/: App.js
laserchess-Frontend/src/redux/: store.js
laserchess-Frontend/src/redux/slices/: gameSlice.js  websocketMiddleware.js
server/include/levels/: level1.hpp
server/include/server/: player.hpp  server.hpp
server/src/: main.cpp  player.cpp  server.cpp
